k8s/mtls.yml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  namespace: "microservices"
spec: 
  mtls:
    mode: STRICT
