k8s/billing-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-service
  namespace: microservices
spec:
  replicas: 2
  selector:
    matchLabels:
      app: billing-service
  template:
    metadata:
      labels:
        app: billing-service
    spec:
      containers:
        - name: billing-service
          image: billing-service:latest
          ports:
            - containerPort: 7000
---
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: microservices
spec:
  selector:
    app: billing-service
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000
