k8s/customer-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
  namespace: microservices
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customer-service
  template:
    metadata:
      labels:
        app: customer-service
    spec:
      containers:
        - name: customer-service
          image: customer-service:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: microservices
spec:
  selector:
    app: customer-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
