k8s/circuit-breaking.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: notification-service-dr
  namespace: microservices
spec:
  host: notification-service.microservices.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutiveErrors: 1
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 100

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: notification-vs
  namespace: microservices
spec:
  hosts:
    - notification-service
  http:
    - route:
        - destination:
            host: notification-service.microservices.svc.cluster.local
            port:
              number: 9090
