k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer
  namespace: microservices
spec:
  hosts:
    - customer-service
  http:
    - route:
        - destination:
            host: customer-service
            subset: v1
          weight: 90
        - destination:
            host: customer-service
            subset: v2
          weight: 10
